# gemini-auth-switch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: context.md  roadmap.md
scripts/: install-user.sh
src/gemini_auth_switch/: cli.py  paths.py  store.py
tests/: test_store.py
