[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-auth-switch"
version = "0.1.0"
description = "Small, Linux-first account pooling for the official Gemini CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "xxb"}
]
keywords = ["gemini", "gemini-cli", "oauth", "accounts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: Utilities"
]

[project.urls]
Repository = "https://github.com/xxb/gemini-auth-switch"
Issues = "https://github.com/xxb/gemini-auth-switch/issues"
Changelog = "https://github.com/xxb/gemini-auth-switch/releases"

[project.scripts]
gswitch = "gemini_auth_switch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
